[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

actix-web-actors = "4.1"

env_logger = "0.9"
log = "0.4"

bytestring = "1.0.0"
rand = "0.8.5"
